Fix layout on mobile

--- a/NewTabRedux/res/css/newtabredux.css
+++ b/NewTabRedux/res/css/newtabredux.css
@@ -99,7 +99,7 @@ a {
 #links {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
     grid-auto-rows: 10px;
 }
 #links .panelWrapper {
